--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "king",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/eattopking/yst-cli#readme",
   "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "download-git-repo": "^1.0.2",
@@ -24,5 +26,11 @@
     "inquirer": "^6.0.0",
     "log-symbols": "^2.2.0",
     "ora": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
