--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
     "react-dom": "^16.6.3",
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
-    "download-git-repo": "^1.0.2",
     "handlebars": "^4.0.11",
     "inquirer": "^6.0.0",
     "log-symbols": "^2.2.0",
@@ -31,6 +30,13 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "download-git-repo": "^1.1.0",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "lodash": "^4.17.11",
+    "request": "^2.88.0",
+    "rimraf": "^2.6.2",
+    "semver": "^5.6.0"
   }
 }
