--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.11",
     "request": "^2.88.0",
     "rimraf": "^2.6.2",
-    "semver": "^5.6.0"
+    "semver": "^5.6.0",
+    "shelljs": "^0.8.4"
   }
 }
